# SignalForge

./: .gitignore  AGENTS.md  README.md  README.zh-TW.md  pyproject.toml  requirements.txt
docs/: alphaforge_handoff.md  signal_semantics_v02.md
docs/demos/: signalforge_to_alphaforge_e2e.md
docs/releases/: sf-2-composer-v02-output.md  sf-3-generate-v02-config.md  sf-6-package-real-v02-artifacts.md  sf-7-tw-multi-symbol-pipeline.md  signalforge-alphaforge-e2e-checkpoint.md  v0.1-readiness.md
examples/: twse_2330_moskowitz_signal.yaml
openspec/specs/: alphaforge-compatibility-contract.md  data-quality-report.md  data-registry-mvp.md  factor-interface-contract.md  factor-registry-contract.md  moskowitz-momentum-factor.md  project-boundary.md  signal-artifact-contract.md  signal-composer-contract.md  signal-contract-yaml.md  signal-export-contract.md
scripts/: download_tw_ohlcv.py  read_memory.py  run_signalforge_alphaforge_demo.py  run_tw_multi_symbol_pipeline.py
src/signalforge/: __init__.py  alphaforge_v02_package.py  alphaforge_v02_smoke.py  (+9 more)
tests/: test_alphaforge_compatibility.py  test_alphaforge_compatibility_package_builder.py  test_alphaforge_v02_package.py  test_alphaforge_v02_smoke.py  test_cli.py  test_data_registry.py  test_demo_docs.py  test_e2e_generate_artifacts.py  test_export.py  test_factor_base.py  test_factor_registry.py  test_generate_v02_config.py  test_moskowitz_momentum.py  test_readme.py  test_signal_artifact_contract.py  test_signal_composer.py  test_signal_composer_v02.py  test_signal_semantics_v02.py  test_tw_multi_symbol_pipeline.py
(+65 files in other folders)
