[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signalforge"
version = "0.1.0"
description = "Paper-derived factor and standardized signal generation layer"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.0",
    "numpy>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]
